--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar__container {
-    background-color: var(--white);
-    color: var(--black);
+    background-color: var(--black)!important;
+    /* color: var(--white)!important; */
 
     position: fixed;
     top: 0;
@@ -15,6 +15,10 @@
 .navbar__container .form-control:focus {
     border-color: var(--primary);
     box-shadow: 0 0 0 0.25rem rgba(23, 135, 130, 0.25);
+}
+
+.navbar-brand {
+    color: var(--white);
 }
 
 @media (max-width: 575.98px) {
