--- a/src/components/BankCard/BankCard.css
+++ b/src/components/BankCard/BankCard.css
@@ -1,19 +1,25 @@
-
 .card {
-    border-radius: 30px;
-    max-width: 100%;
-    height: auto;
-    border-style: none;
+  border-radius: 30px;
+  max-width: 100%;
+  height: auto;
+  border-style: none;
 
-background: #e0e0e0;
-box-shadow:  11px 11px 22px #6e6e6e,
-             -11px -11px 22px #ffffff;
+  background: #e0e0e0;
+  box-shadow: 11px 11px 22px #6e6e6e, -11px -11px 22px #ffffff;
+  
+  transition: all 0.3s ease;
+}
+
+.card:hover {
+  transform: scale(1.02);
+  transition: all 0.3s ease;
 }
 
 .img__card {
   position: relative !important;
   border-radius: 20px 20px 0 0;
   aspect-ratio: 1/1;
+  cursor: pointer;
 }
 
 .img__card img {
@@ -22,13 +28,14 @@ box-shadow:  11px 11px 22px #6e6e6e,
 }
 
 .card .card-body .card-title {
-    font-weight: bold;
-    color: var(--primary);
-    min-height: 60px;
-    text-overflow: ellipsis;
+  font-weight: bold;
+  color: var(--primary);
+  min-height: 60px;
+  text-overflow: ellipsis;
+  cursor: pointer;
 }
 
 .card .card-body .card-text {
-    height: 60px;
-    text-overflow: ellipsis;
+  height: 60px;
+  text-overflow: ellipsis;
 }
